add deal offer FE functionality; fix BE bugs on deal offer